@@ -1,3 +1,11 @@
+Fri Feb 14 12:28:40 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
+
+	* xe_parse.adb: Apply changes from xe into xe_parse.
+
+	* xe.ads, xe.adb: Get rid of two unused and useless procedures.
+  	Move Type_Is_A_Structure and is_Type_A_Strcture into
+ 	Set_Array_Element_Type and Get_Array_Element_Type.
+
 Thu Feb 13 15:21:57 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
 
 	* xe.adb: Minor reformating
